--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <button id="change" type="button">Change Grid</button>
     <div class = "project"></div>
     <script src="script.js"></script>
 </body>
